test: PaymentServiceTest에 @ActiveProfiles 제거, 자바 21의 getFirst() 사용 수정 (#71)